force-app/main/default/objects/Invoice__c/fields/Amount_Paid_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Rollup__c</fullName>
    <label>Amount Paid</label>
    <summarizedField>Payment_Transaction__c.Amount_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Transaction__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>