force-app/main/default/objects/Invoice__c/fields/Invoice_Age__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Age__c</fullName>
    <formula>TODAY() -  Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>