force-app/main/default/objects/Invoice__c/fields/Tax_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_2__c</fullName>
    <label>Tax 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>