force-app/main/default/objects/Invoice__c/fields/Tax_3__c.field-meta.xml
<CustomField>
    <fullName>Tax_3__c</fullName>
    <label>Tax 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>