force-app/main/default/objects/Invoice__c/fields/Tax_Amount_Percent_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Percent_1__c</fullName>
    <label>Tax Amount Percent 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>