force-app/main/default/objects/Invoice__c/fields/Total_Line_Items_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Items_Amount__c</fullName>
    <label>Total Line Items Amount</label>
    <summarizedField>Invoice_Line_Items__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Items__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>