force-app/main/default/objects/Invoice__c/fields/Total_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Amount__c</fullName>
    <label>Total Tax Amount</label>
    <summarizedField>Invoice_Taxes__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Taxes__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>