force-app/main/default/objects/Invoice__c/fields/Total_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Transaction_Amount__c</fullName>
    <inlineHelpText>Total transaction amount for invoice</inlineHelpText>
    <label>Total Transaction Amount</label>
    <summarizedField>Payment_Transaction__c.Stripe_Fee__c</summarizedField>
    <summaryForeignKey>Payment_Transaction__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>